--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
       <section class="gallery-items">
         <!-- ITEM 1 (Modern Design) -->
         <article class="item">
-          <script src="/js/scripts.js" defer></script>
-          <link rel="stylesheet" href="/css/layout.css" />
-          <link rel="stylesheet" href="/css/secondary/image-detail.css" />
           <h2>Modern Design</h2>
           <div class="img-wrapper">
             <!-- TODO: add relative path to design-image.jpg file -->
@@ -73,15 +70,12 @@
             />
           </div>
           <!-- TODO: add relative path to modern-design.html file -->
-          <a href="https://unsplash.com/s/photos/modern-design" class="details"
+          <a href="/pages/modern-design.html" class="details"
             >Modern Design Details</a
           >
         </article>
         <!-- ITEM 2 (Plants) -->
         <article class="item">
-          <script src="../js/scripts.js" defer></script>
-          <link rel="stylesheet" href="./css./layout.css" />
-
           <h2>Plants</h2>
           <div class="img-wrapper">
             <!-- TODO: add relative path to plant-image.jpg file -->
@@ -91,14 +85,10 @@
             />
           </div>
           <!-- TODO: add relative path to plants.html file -->
-          <a href="https://unsplash.com/s/photos/plants" class="details"
-            >Plants Details</a
-          >
+          <a href="/pages/plants.html" class="details">Plants Details</a>
         </article>
         <!-- ITEM 3 (Space) -->
         <article class="item">
-          <script src="../js/scripts.js" defer></script>
-          <link rel="stylesheet" href="../css./layout.css" />
           <h2>Space</h2>
           <div class="img-wrapper">
             <!-- TODO: add relative path to space-image.jpg file -->
@@ -108,15 +98,10 @@
             />
           </div>
           <!-- TODO: add relative path to space.html file -->
-          <a href="https://unsplash.com/s/photos/space" class="details"
-            >Space Details</a
-          >
+          <a href="/pages/space.html" class="details">Space Details</a>
         </article>
         <!-- ITEM 4 (Nature) -->
         <article class="item">
-          <script src="../js/scripts.js" defer></script>
-          <link rel="stylesheet" href="./css./layout.css" />
-
           <h2>Nature</h2>
           <div class="img-wrapper">
             <!-- TODO: add relative path to nature-image.jpg file -->
@@ -126,9 +111,7 @@
             />
           </div>
           <!-- TODO: add relative path to nature.html file -->
-          <a href="https://unsplash.com/s/photos/nature" class="details"
-            >Nature Details</a
-          >
+          <a href="/pages/nature.html" class="details">Nature Details</a>
         </article>
       </section>
     </main>
